# Pacman-main

./: CMakeLists.txt  Klassendiagramm.uxf  README.md  config.h  main.cpp  master_header.h  utils.cpp  utils.h
Anzeige/: start.cpp  start.h
Board/: board.cpp  board.h  check_position.cpp  check_position.h  config.h  level.cpp  level.h  level.txt
Controls/: check_collision.h  check_collison.cpp  controller.h  ghost_controller.cpp  ghost_controller.h  player_controller.cpp  player_controller.h
Display/: UserManager.cpp  instructions.cpp  instructions.h  scoreBoard.cpp  scoreBoard.h  start_screen.cpp  start_screen.h  userManager.h  userManger.cpp
Dokumentation/: Dokumentation_Helen.md  Gesamtüberblick.md  Klassendiagramm.uxf
Game/: draw_game.cpp  game.cpp  game.h  game_init.cpp  update_game.cpp
GameObjects/: figures.cpp  figures.h  fruits.cpp  fruits.h  game_objects.h  ghost.cpp  ghost.h  items.cpp  items.h  lives.cpp  lives.h  pacman.cpp  pacman.h  points.cpp  points.h
